Deal with a nonexistant Welcome.properties file